# openai-embeddings-demo

./: .gitignore  1_create_embeddings.ipynb  2_save_data_to_postgres.ipynb  3_search.ipynb  README.md  pyproject.toml
data/: 1_input_data.json  2_data_with_embeddings.json
