[project]
name = "openai-embeddings-demo"
version = "0.1.0"
description = "Project to learn how to use the OpenAI embeddings API, Postgres and pgvector"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.0",
    "openai>=1.98.0",
    "psycopg[binary]>=3.2.9",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
